Fix: Removes duplicate scrollbars. CSS cleanup to more closely align with designs.

--- a/packages/scene-composer/src/components/Tree/tree.scss
+++ b/packages/scene-composer/src/components/Tree/tree.scss
@@ -1,132 +1,171 @@
-$border: 1px solid #414750;
+$background: #2a2e33;
+$background-gradient: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(42, 46, 51, 1) 38%, rgba(42, 46, 51, 1) 100%);
+$background-hover: #414750;
+$border: 1px solid $background;
 $text-color: #d5dbdb;
 $active-highlight: #00a1c9;
 $active-bg: #12293b;
+$active-bg-gradient: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(18, 41, 59, 1) 38%, rgba(18, 41, 59, 1) 100%);
 $indent: 1rem;
+$active-color: #ec7211;
 
-.tm-main {
-  overflow: auto;
-  margin-bottom: 55px;
+@mixin selected {
+  border-top: 1px solid $active-highlight;
+  border-bottom: 1px solid $active-highlight;
+  background: $active-bg;
+}
+@mixin selected-action {
+  @include selected;
+  background: $active-bg-gradient;
+  margin-top: -1px;
+  margin-bottom: -1px;
+}
+@mixin hover {
+  @include selected;
+  color: $active-color;
+}
 
-  .tm-tree {
-    list-style-type: none;
-    list-style-position: outside;
-    padding: 0;
-    padding-left: 1rem;
-    padding-bottom: 2rem;
-    margin: 0;
-    border-top: $border;
-    position: relative;
-    user-select: none;
-
-    &.drop,
-    .drop {
-      border-bottom: 3px solid #fff;
-    }
+  #tm-main {
+    margin-bottom: 5px;
 
     .tm-tree {
-      border-top: none;
-      position: initial;
-      padding-left: 0;
-      padding-bottom: 0;
-    }
+      border-top: $border;
+      list-style-position: outside;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      user-select: none;
 
-    .tm-tree-item {
-      padding-left: $indent;
-
-      &.expandable {
-        .tm-tree {
-          margin-left: $indent * 3;
-          border-left: $border;
-        }
+      &.drop,
+      .drop {
+        border-bottom: 3px solid #fff;
       }
 
-      &::marker {
-        padding: 0;
-        margin: $indent * -1;
-        display: inline-block;
-      }
+      .tm-tree-item {
+        padding-left: $indent * 2;
+        border-top: 1px solid $background-hover;
 
-      .tm-tree-item-inner {
-        border-top: 1px solid transparent; // Invisible space to avoid jiggling
-        border-bottom: $border;
-        cursor: pointer;
-
-        span {
-          grid-column: 2/-1;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-
-          p {
-            margin: 0;
-            padding: 8px 8px 8px 0;
-          }
+        &::marker {
+          padding: 0;
+          margin: $indent * -1;
+          display: inline-block;
         }
 
-        label {
-          align-items: center;
-        }
-        .tm-tree-item-expand-btn {
-          align-items: center;
-          span {
-            align-items: center;
-          }
-        }
-        .tm-scene-node-label {
-          align-items: center;
+        .tm-tree-item-inner {
+          cursor: pointer;
+          margin-left: -2rem;
+          padding-left: 2rem;
 
-          .tm-scene-node-label-inner {
-            grid-column: 2/-2;
-            margin: 0;
-            padding-left: 8px;
-            white-space: nowrap;
 
-            label {
-              align-items: center;
+          .tm-scene-node-label {
+            .tm-scene-node-label-inner {
+              flex: 0 0 100%;
+              padding: 16px;
+              margin-top: -1px;
+              margin-bottom: -1px;
+              padding-right: 20px;
+              margin-right: -20px;
+              width: 100vw;
+            }
+
+            .actions {
+              background-color: var(--color-background-container-content-o88wxm, #ffffff); // fallback for gradient
+              background: $background-gradient;
+              position: sticky;
+              right: 0;
+              padding: 12px 10px 12px 20px;
             }
           }
 
-          span {
-            grid-column: 1/2;
+          label {
+            width: 100%;
+            align-items: center;
+            padding-left: 1rem;
 
-            &.actions {
-              button.tm-visibility-toggle.tm-icon-button {
-                position: absolute;
-                right: 0;
+            span {
+              span {
+                align-items: center;
+                display: flex;
+
+                &:before {
+                  box-shadow: none;
+                }
+
+                .tm-tree-item-expand-btn {
+                  min-width: unset; 
+                }
+              }
+
+              &[class*='awsui_control_'] {
+                margin-top: 0;
+              }
+            }
+
+            &:hover {
+              margin-top: -1px; // Cancells out movement from hover/selected border
+              margin-bottom: -1px; // Cancells out movement from hover/selected border
+              @include hover;
+
+              .tm-scene-node-label-inner {
+                border: none;
+                @include hover;
+                margin-top: -4px;
+                margin-bottom: -3px;
+              }
+              .actions {
+                @include selected-action;
+
+                button {
+                  padding-top: 4px; 
+                  padding-bottom: 4px; 
+                  color: $active-color;
+                }
+              }
+            }
+          }
+
+          &:hover {
+            label {
+              span {
+                span {
+                  color: $active-color; // this targets visibility icon
+                }
+              }
+            }
+          }
+
+          &.selected {
+            @include selected;
+            .tm-scene-node-label-inner {
+              border: none;
+              @include selected;
+              margin-top: -4px;
+              margin-bottom: -3px;
+            }
+            .actions {
+              @include selected-action;
+
+              button {
+                padding-top: 4px;
+                padding-bottom: 4px;
               }
             }
           }
         }
+      }
 
-        .tm-tree-item-expand-btn {
-          float: left;
-        }
-
-        label {
-          display: block;
-          width: 100%;
-
-          div {
-            width: 100%;
-          }
-        }
-
-        /*
-      There really shouldn't be this much nesting or the UI will be pretty broken. But in the event where I'm wrong,
-      and a customer complains that the borders and hover state are a tad off in rediculously nested trees, you can add a 0 to the next 2
-      values, and you should be good to go for a good long while.
-       */
-        margin-left: -1000px; // Negative margin makes the border apply regardless of indent.
-        padding-left: 1000px; // Cancels out the negative margin for content placement
-
-        &:hover,
-        &.selected {
-          border-top: 1px solid $active-highlight;
-          border-bottom: 1px solid $active-highlight;
-          background: $active-bg;
-        }
+      .tm-draggable[draggable=true]::before {
+        margin: 0;
+        padding: 1.65rem 1rem;
+      }
+      
+      // nested tree
+      .tm-tree {
+        border-top: none;
+        position: initial;
+        padding-left: 0;
+        padding-bottom: 0;
       }
     }
   }
-}
